Partho - index,404 only structure without css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>zakirsoft</title>
     <link rel="stylesheet" href="assets/css/all.min.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/slick.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -59,16 +60,236 @@
     </div>
     <!-- header section end -->
 
-    <!-- ?? section start -->
-    <!-- ?? section end -->
+    <!-- banner section start -->
+    <section id="banner_area" class="none">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="banner_wrapper">
+                        <div class="banner_title">
+                            <h2>We are here to grow your<span>Business.</span> </h2>
+                            <p>Curabitur vulputate arcu odio, ac facilisis diam accumsan ut. Ut imperdiet et leo in
+                                vulputate.</p>
+                        </div>
+                        <div class="banner_button">
+                            <a class="btn" href="#">View Projects</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="banner_img">
+                        <img src="assets/images/Inllustration.svg" alt="Inllustration images" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- banner section end -->
 
     <!-- ?? section start -->
     <!-- ?? section end -->
+
+    <!-- what-do section start -->
+    <section id="what_do_area" class="none">
+        <div class="container">
+            <div class="section_title">
+                <h2>What we do</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="box_head">
+                        <h2>Front end <span>Developer</span></h2>
+                    </div>
+                    <div class="box_overlay">
+                        <div class="box-title">
+                            <h2>Front end Developer</h2>
+                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
+                                Cras at est augue. Cras ut interdum elit. </p>
+                            <div class="box_link">
+                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="box_head">
+                        <h2>Creative <span>Designer</span></h2>
+                    </div>
+                    <div class="box_overlay">
+                        <div class="box-title">
+                            <h2>Creative Designer</h2>
+                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
+                                Cras at est augue. Cras ut interdum elit. </p>
+                            <div class="box_link">
+                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="box_head">
+                        <h2>back end <span>Developer</span></h2>
+                    </div>
+                    <div class="box_overlay">
+                        <div class="box-title">
+                            <h2>back end Developer</h2>
+                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
+                                Cras at est augue. Cras ut interdum elit. </p>
+                            <div class="box_link">
+                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="box_head">
+                        <h2>Ui/Ux<span>Designer</span></h2>
+                    </div>
+                    <div class="box_overlay">
+                        <div class="box-title">
+                            <h2>Ui/Ux Designer</h2>
+                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
+                                Cras at est augue. Cras ut interdum elit. </p>
+                            <div class="box_link">
+                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- what-do section end -->
+
+    <!-- brand section start -->
+    <section id="brand_area" class="none">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="brand-active">
+                        <div class="single_brand">
+                            <img src="assets/images/Adobe.png" alt="brand logo">
+                        </div>
+                        <div class="single_brand">
+                            <img src="assets/images/Sketch.png" alt="brand logo">
+                        </div>
+                        <div class="single_brand">
+                            <img src="assets/images/Spotify.png" alt="brand logo">
+                        </div>
+                        <div class="single_brand">
+                            <img src="assets/images/google.png" alt="brand logo">
+                        </div>
+                        <div class="single_brand">
+                            <img src="assets/images/amazon.png" alt="brand logo">
+                        </div>
+                        <div class="single_brand">
+                            <img src="assets/images/Invision.png" alt="brand logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- brand section end -->
+
+    <!-- testimonial section start -->
+    <section id="testimonial-area" class="none">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title">
+                        <h2>Testimonials</h2>
+                    </div>
+                    <div class="testimonial-active">
+                        <div class="single-testimonial">
+                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
+                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
+                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
+                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
+                            <span>Frank Wagner</span>
+                            <h2>CEO of Invision</h2>
+                        </div>
+                        <div class="single-testimonial">
+                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
+                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
+                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
+                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
+                            <span>Frank Wagner</span>
+                            <h2>CEO of Invision</h2>
+                        </div>
+                        <div class="single-testimonial">
+                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
+                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
+                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
+                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
+                            <span>Frank Wagner</span>
+                            <h2>CEO of Invision</h2>
+                        </div>
+                        <div class="single-testimonial">
+                            <p>"Cras eu elit congue, placerat dui ut, tincidunt nisl. Nulla leo elit, pharetra bibendum
+                                justo quis, cursus consectetur erat. Sed nec posuere turpis. Maecenas nec bibendum
+                                purus. Nulla fringilla, lorem iaculis iaculis fermentum, ligula nibh mollis ipsum, et
+                                scelerisque risus ante eu sem. Phasellus ac sagittis nisi. Suspendisse potenti."</p>
+                            <span>Frank Wagner</span>
+                            <h2>CEO of Invision</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- testimonial section end -->
+
+    <!-- footer section start -->
+    <footer id="footer-area" class="none">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="footer-menu">
+                        <span>Quick Link</span>
+                        <ul class="nav_links">
+                            <li class="nav_items"><a href="#">Home</a></li>
+                            <li class="nav_items"><a href="#">About</a></li>
+                            <li class="nav_items"><a href="#">work</a></li>
+                            <li class="nav_items"><a href="#">Career</a></li>
+                            <li class="nav_items"><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="connect-imfo">
+                        <h4>Connect With us</h4>
+                        <p>In consequat, quam id sodales hendrerit, eros mi molestie leo, nec lacinia risus neque
+                            tristique augue. Proin tempus urna vel congue elementum.
+                        </p>
+                        <span>Zakirsoft@outlook.com</span>
+                    </div>
+                    <div class="solial-link">
+                        <ul>
+                            <li><a href="#"><i class="fab fa-behance"></i></a></li>
+                            <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fab fa-github"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="copyright-text">
+                        <p>&#169; 2020 - Zakirsoft</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- footer section end -->
+
 
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/slick.min.js"></script>
     <script src="assets/js/app.js"></script>
     <script>
 
