work.html & included others html files on link

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     <!-- header section end -->
 
     <!-- about-us section start -->
-    <section id="about">
+    <section id="about" class="none">
         <div class="container">
             <div class="row section_title">
                 <h2>About us</h2>
@@ -107,7 +107,7 @@
     <!-- about-us section end -->
 
     <!-- Team section start -->
-    <section id="team">
+    <section id="team" class="none">
         <div class="container">
             <div class="row section_title">
                 <h2>About us</h2>
@@ -143,7 +143,7 @@
                 <div class="col-md-6">
                     <div class="team_card">
                         <div class="members_img">
-                            <img src="assets/images/team/te" alt="team-members" class="img-fluid">
+                            <img src="assets/images/team/Team-4.png" alt="team-members" class="img-fluid">
                         </div>
                         <h3 class="name">Jerry vargas</h3>
                         <span class="position">CEO & Developer</span>
