partho_join-conatct-us

--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -59,43 +59,43 @@
         </div>
     </div>
     <!-- header section end -->
-
-    <!-- 404 section start -->
-    <section id="404_area" class="none">
+    <!-- joinus section start -->
+    <section id="joinus-contact-area" class="none">
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <div class="404_wrapper">
-                        <img src="assets/images/404.svg" alt="404 images">
-                    </div>
-                    <div class="section_title">
-                        <h2>Oops, The page you are looking is not found</h2>
-                    </div>
-                    <div class="404_button">
-                        <a class="btn" href="#">Back to home</a>
-                    </div>
-                    <div class="bottom">
-                        <div class="container">
-                            <ul class="social_links">
-                                <li><a href="#"><i class="fab fa-behance"></i></a></li>
-                                <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fab fa-github"></i></a></li>
-                                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                            </ul>
-                            <div class="c_rights">
-                                <h5>&copy; 2020 - Zakirsoft</h5>
+                    <div class="contact-form">
+                        <form>
+                            <div class="form-row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Enter Your name" required>
+                                </div>
+                                <div class="col">
+                                    <input type="email" class="form-control" placeholder="Please enter a valid email" required>
+                                </div>
                             </div>
-                        </div>
+                            <div class="form-row">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="First name">
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Last name">
+                                </div>
+                            </div>
+                            <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <button type="submit">SEND MESSAGE</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="copyright-text">
+                        <p>&#169; 2020 - Zakirsoft</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- 404 section end -->
-
+    <!-- joinus section end -->
 
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
