--- a/join-us.html
+++ b/join-us.html
@@ -33,11 +33,11 @@
         <div class="top">
             <div class="container">
                 <ul class="nav_links">
-                    <li class="nav_items"><a href="#">Home</a></li>
-                    <li class="nav_items"><a href="#">About</a></li>
-                    <li class="nav_items"><a href="#">work</a></li>
-                    <li class="nav_items"><a href="#">Career</a></li>
-                    <li class="nav_items"><a href="#">Contact</a></li>
+                    <li class="nav_items"><a href="index.html">Home</a></li>
+                    <li class="nav_items"><a href="about.html">About</a></li>
+                    <li class="nav_items"><a href="work.html">work</a></li>
+                    <li class="nav_items"><a href="career.html">Career</a></li>
+                    <li class="nav_items"><a href="join-us.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -113,7 +113,7 @@
         </div>
     </section>
     <!-- joinus section end -->
-    
+
     <!-- all js goes here -->
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
