modifed menus link

--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
                     <li class="nav_items"><a href="about.html">About</a></li>
                     <li class="nav_items"><a href="work.html">work</a></li>
                     <li class="nav_items"><a href="career.html">Career</a></li>
-                    <li class="nav_items"><a href="join-us.html">Contact</a></li>
+                    <li class="nav_items"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
