--- a/join-us-contact.html
+++ b/join-us-contact.html
@@ -37,7 +37,7 @@
                     <li class="nav_items"><a href="about.html">About</a></li>
                     <li class="nav_items"><a href="work.html">work</a></li>
                     <li class="nav_items"><a href="career.html">Career</a></li>
-                    <li class="nav_items"><a href="join-us.html">Contact</a></li>
+                    <li class="nav_items"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -71,7 +71,8 @@
                                     <input type="text" class="form-control" placeholder="Enter Your name" required>
                                 </div>
                                 <div class="col">
-                                    <input type="email" class="form-control" placeholder="Please enter a valid email" required>
+                                    <input type="email" class="form-control" placeholder="Please enter a valid email"
+                                        required>
                                 </div>
                             </div>
                             <div class="form-row">
