--- a/about.html
+++ b/about.html
@@ -32,11 +32,11 @@
         <div class="top">
             <div class="container">
                 <ul class="nav_links">
-                    <li class="nav_items"><a href="#">Home</a></li>
-                    <li class="nav_items"><a href="#">About</a></li>
-                    <li class="nav_items"><a href="#">work</a></li>
-                    <li class="nav_items"><a href="#">Career</a></li>
-                    <li class="nav_items"><a href="#">Contact</a></li>
+                    <li class="nav_items"><a href="index.html">Home</a></li>
+                    <li class="nav_items"><a href="about.html">About</a></li>
+                    <li class="nav_items"><a href="work.html">work</a></li>
+                    <li class="nav_items"><a href="career.html">Career</a></li>
+                    <li class="nav_items"><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
