--- a/index.html
+++ b/index.html
@@ -61,24 +61,20 @@
     <!-- header section end -->
 
     <!-- banner section start -->
-    <section id="banner_area" class="none">
+    <section id="banner" class="none">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-lg-7 order-2 order-lg-0">
                     <div class="banner_wrapper">
-                        <div class="banner_title">
-                            <h2>We are here to grow your<span>Business.</span> </h2>
-                            <p>Curabitur vulputate arcu odio, ac facilisis diam accumsan ut. Ut imperdiet et leo in
-                                vulputate.</p>
-                        </div>
-                        <div class="banner_button">
-                            <a class="btn" href="#">View Projects</a>
-                        </div>
+                        <h2>We are here to <br> grow your <br><span class="text_stroke">Business.</span> </h2>
+                        <p>Curabitur vulputate arcu odio, ac facilisis diam accumsan ut. Ut imperdiet et leo in
+                            vulputate.</p>
+                        <a class="button" href="#">View Projects</a>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-lg-5 order-1 order-lg-0">
                     <div class="banner_img">
-                        <img src="assets/images/Inllustration.svg" alt="Inllustration images" class="img-fluid">
+                        <img src="assets/images/Inllustration.svg" alt="Ilustrator-img">
                     </div>
                 </div>
             </div>
@@ -86,77 +82,120 @@
     </section>
     <!-- banner section end -->
 
-    <!-- ?? section start -->
-    <!-- ?? section end -->
+    <!-- work section start -->
+    <section id="work" class="none d-none">
+        <div class="container">
+            <div class="row section_title">
+                <h2>our Work</h2>
+            </div>
+            <div class=" project_slider">
+                <div class="slide_item row">
+                    <div class="col-4">
+                        <div class="slide_info">
+                            <span class="p_type">Project type</span>
+                            <h3 class="p_title">Project Name</h3>
+                            <a class="v_project">
+                                <span>View Project</span>
+                                <img src="assets/images/Arrow-icon.png" alt="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-8">
+                        <div class="project_img">
+                            <img src="assets/images/project-img/img-1.png" alt="project-img" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- work section end -->
 
     <!-- what-do section start -->
-    <section id="what_do_area" class="none">
+    <section id="WE_Do" class="none">
         <div class="container">
-            <div class="section_title">
+            <div class="row section_title">
                 <h2>What we do</h2>
             </div>
             <div class="row">
-                <div class="col-md-6">
-                    <div class="box_head">
-                        <h2>Front end <span>Developer</span></h2>
-                    </div>
-                    <div class="box_overlay">
-                        <div class="box-title">
-                            <h2>Front end Developer</h2>
-                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
-                                Cras at est augue. Cras ut interdum elit. </p>
-                            <div class="box_link">
-                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                <div class="col-lg-6 col-12 mb-30">
+                    <div class="box_wrapper">
+                        <div class="card_box">
+                            <div class="front_part">
+                                <h2>Front end <span class="text_stroke">Developer</span></h2>
+                            </div>
+                            <div class="back_part">
+                                <div class="box_title">
+                                    <h2>Front end Developer</h2>
+                                    <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec
+                                        ante.
+                                        Cras at est augue. Cras ut interdum elit. </p>
+                                    <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"
+                                            class="img-fluid"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="box_head">
-                        <h2>Creative <span>Designer</span></h2>
-                    </div>
-                    <div class="box_overlay">
-                        <div class="box-title">
-                            <h2>Creative Designer</h2>
-                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
-                                Cras at est augue. Cras ut interdum elit. </p>
-                            <div class="box_link">
-                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                <div class="col-lg-6 col-12 mb-30">
+                    <div class="box_wrapper">
+                        <div class="card_box">
+                            <div class="front_part">
+                                <h2>Front end <span class="text_stroke">Developer</span></h2>
+                            </div>
+                            <div class="back_part">
+                                <div class="box_title">
+                                    <h2>Front end Developer</h2>
+                                    <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec
+                                        ante.
+                                        Cras at est augue. Cras ut interdum elit. </p>
+                                    <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"
+                                            class="img-fluid"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="box_head">
-                        <h2>back end <span>Developer</span></h2>
-                    </div>
-                    <div class="box_overlay">
-                        <div class="box-title">
-                            <h2>back end Developer</h2>
-                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
-                                Cras at est augue. Cras ut interdum elit. </p>
-                            <div class="box_link">
-                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                <div class="col-lg-6 col-12 mb-30">
+                    <div class="box_wrapper">
+                        <div class="card_box">
+                            <div class="front_part">
+                                <h2>Front end <span class="text_stroke">Developer</span></h2>
+                            </div>
+                            <div class="back_part">
+                                <div class="box_title">
+                                    <h2>Front end Developer</h2>
+                                    <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec
+                                        ante.
+                                        Cras at est augue. Cras ut interdum elit. </p>
+                                    <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"
+                                            class="img-fluid"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="box_head">
-                        <h2>Ui/Ux<span>Designer</span></h2>
-                    </div>
-                    <div class="box_overlay">
-                        <div class="box-title">
-                            <h2>Ui/Ux Designer</h2>
-                            <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec ante.
-                                Cras at est augue. Cras ut interdum elit. </p>
-                            <div class="box_link">
-                                <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"></a>
+                <div class="col-lg-6 col-12">
+                    <div class="box_wrapper">
+                        <div class="card_box">
+                            <div class="front_part">
+                                <h2>Front end <span class="text_stroke">Developer</span></h2>
+                            </div>
+                            <div class="back_part">
+                                <div class="box_title">
+                                    <h2>Front end Developer</h2>
+                                    <p>Aliquam in bibendum mauris. Sed vitae erat vel velit blandit pharetra vitae nec
+                                        ante.
+                                        Cras at est augue. Cras ut interdum elit. </p>
+                                    <a href="#">Read More <img src="assets/images/arrow.png" alt="Arrow"
+                                            class="img-fluid"></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
     <!-- what-do section end -->
@@ -164,28 +203,24 @@
     <!-- brand section start -->
     <section id="brand_area" class="none">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="brand-active">
-                        <div class="single_brand">
-                            <img src="assets/images/Adobe.png" alt="brand logo">
-                        </div>
-                        <div class="single_brand">
-                            <img src="assets/images/Sketch.png" alt="brand logo">
-                        </div>
-                        <div class="single_brand">
-                            <img src="assets/images/Spotify.png" alt="brand logo">
-                        </div>
-                        <div class="single_brand">
-                            <img src="assets/images/google.png" alt="brand logo">
-                        </div>
-                        <div class="single_brand">
-                            <img src="assets/images/amazon.png" alt="brand logo">
-                        </div>
-                        <div class="single_brand">
-                            <img src="assets/images/Invision.png" alt="brand logo">
-                        </div>
-                    </div>
+            <div class="brand_slider">
+                <div class="single_brand">
+                    <img src="assets/images/partner/Adobe.png" alt="brand logo">
+                </div>
+                <div class="single_brand">
+                    <img src="assets/images/partner/Sketch.png" alt="brand logo">
+                </div>
+                <div class="single_brand">
+                    <img src="assets/images/partner/Spotify.png" alt="brand logo">
+                </div>
+                <div class="single_brand">
+                    <img src="assets/images/partner/google.png" alt="brand logo">
+                </div>
+                <div class="single_brand">
+                    <img src="assets/images/partner/amazon.png" alt="brand logo">
+                </div>
+                <div class="single_brand">
+                    <img src="assets/images/partner/Invision.png" alt="brand logo">
                 </div>
             </div>
         </div>
