about pag css design

--- a/about.html
+++ b/about.html
@@ -15,8 +15,8 @@
     <header>
         <div class="container">
             <nav class="head_content">
-                <div class="c_logo">
-                    <h2>Zakir <span class="c_blue">Soft</span></h2>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/images/logo/1.png" alt="logo"></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
@@ -65,41 +65,66 @@
             <div class="row section_title">
                 <h2>About us</h2>
             </div>
-            <div class="row about_content">
+            <div class="row about_content align-items-center">
                 <div class="col-md-6">
-                    <span>Images goes here latter</span>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="about_contect_img">
+                                <img src="assets/images/about/about.png" alt="img" class="img-fluid">
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="about_contect_img_1 ">
+                                <img src="assets/images/about/about3.png" alt="img" class=" img-fluid">
+                            </div>
+                            <div class="play-video">
+                                <a href="#"><span><i class="fab fa-youtube"></i> Play Video</span></a>
+                            </div>
+                        </div>
+                        <div class="col-8">
+                            <div class="about_contect_img_2">
+                                <img src="assets/images/about/about2.png" alt="img" class=" img-fluid">
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <h3>Who We are</h3>
-                    <p>
-                        Integer at faucibus urna. Nullam condimentum leo id elit sagittis auctor. Curabitur elementum
-                        nunc a leo imperdiet, nec elementum diam elementum. Etiam elementum euismod commodo. Proin
-                        eleifend eget quam ut efficitur. Mauris a accumsan mauris. Phasellus egestas et risus sit amet
-                        hendrerit. Nulla facilisi.
-                        <br><br>
-                        Cras urna sem, vulputate sed condimentum a, posuere vel enim. Integer at faucibus urna.
-                    </p>
+                    <div class="about_content_wrapper">
+                        <h3>Who We are</h3>
+                        <p>
+                            Integer at faucibus urna. Nullam condimentum leo id elit sagittis auctor.
+                            Curabitur elementum
+                            nunc a leo imperdiet, nec elementum diam elementum. Etiam elementum euismod
+                            commodo. Proin
+                            eleifend eget quam ut efficitur. Mauris a accumsan mauris. Phasellus egestas et
+                            risus sit amet
+                            hendrerit. Nulla facilisi.
+                            <br><br>
+                            Cras urna sem, vulputate sed condimentum a, posuere vel enim. Integer at
+                            faucibus urna.
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="row about_content">
+        </div>
+    </section>
+<!-- about-us 2 section end -->
+    <section id="about_content_2" class="none">
+        <div class="container">
+            <div class="row align-items-center">
                 <div class="col-md-6">
-                    <h3>Who We are</h3>
-                    <p>
-                        Integer at faucibus urna. Nullam condimentum leo id elit sagittis auctor.
-                        Curabitur elementum
-                        nunc a leo imperdiet, nec elementum diam elementum. Etiam elementum euismod
-                        commodo. Proin
-                        eleifend eget quam ut efficitur. Mauris a accumsan mauris. Phasellus egestas et
-                        risus sit amet
-                        hendrerit. Nulla facilisi.
-                        <br><br>
-                        Cras urna sem, vulputate sed condimentum a, posuere vel enim. Integer at
-                        faucibus urna.
-                    </p>
-                    <a href="#" class="btn">Join Our Team</a>
+                    <div class="office_content_wrapper">
+                        <h3>About zakirsoft</h3>
+                        <p>Integer at faucibus urna. Nullam condimentum leo id elit sagittis auctor. Curabitur elementum nunc a leo
+                            imperdiet, nec elementum diam elementum. Etiam elementum euismod commodo. Proin eleifend eget quam ut
+                            efficitur. Mauris a accumsan mauris.</p>
+                        <a href="#" class="btn">Join Our Team</a>
+                    </div>
                 </div>
                 <div class="col-md-6">
-                    <span>Images goes here latter</span>
+                    <div class="about_content_2_img">
+                        <img src="assets/images/about/office.png" alt="office images">
+                    </div>
                 </div>
             </div>
         </div>
@@ -114,75 +139,91 @@
             </div>
             <div class="row team_content">
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-1.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry Vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-2.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-3.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-4.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-5.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-6.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-7.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="team_card">
+                    <div class="team_card text-center">
                         <div class="members_img">
                             <img src="assets/images/team/Team-8.png" alt="team-members" class="img-fluid">
                         </div>
-                        <h3 class="name">Jerry vargas</h3>
-                        <span class="position">CEO & Developer</span>
+                        <div class="member_position">
+                            <h3 class="name">Jerry vargas</h3>
+                            <span class="position">CEO & Developer</span>
+                        </div>
                     </div>
                 </div>
             </div>
