--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="head_content">
                 <div class="c_logo">
-                    <h2>Zakir <span class="c_blue">Soft</span></h2>
+                    <a href="index.html"><h2>Zakir <span class="c_blue">Soft</span></h2></a>
                 </div>
                 <div class="menu">
                     <ul class="m_bar">
